# Classroom-Projects

./: .gitignore  README.md  Resume.odt
CS 3330 Database Concepts/: server.js
CS 3330 Database Concepts/MySQLDockerExample/: docker-compose.yml  package-lock.json  package.json  server.js
CS 3339 Information Assurance and Security/Lab1/: decrypted.txt  dphanekham_encrypted  dphanekham_pubkey  personal_pubkey  plain.txt.asc
CS 3339 Information Assurance and Security/Lab2/: cipher_cbc  cipher_ecb  cipherbody_cbc  cipherbody_ecb  ciphertext  ciphertext2  ciphertext_cbc  ciphertext_cfb  ciphertext_ctr  ciphertext_ecb  ciphertext_ofb  decrypted_cbc.txt  decrypted_cfb.txt  decrypted_ecb.txt  decrypted_ofb.txt  header
CS 3339 Information Assurance and Security/Lab3/: README.md  cracker.py  example_cracked.txt  passwords.txt
CS 3339 Information Assurance and Security/Lab7/: BOF.c  badfile  createBadfile.c
CS 3339 Information Assurance and Security/Lab8/: checklogin.php
CS 3342 Programming Languages/CLI warmup/: warmup.js
CS 3342 Programming Languages/Grammars and Parsing/: FSM  FSM.cpp  README.md
CS 3342 Programming Languages/Prolog/: imperial_hw.pl  imperial_soln.pl
CS 3342 Programming Languages/SQL/: battles.tsv  load_database.sql  pokemon.db  pokemon.tsv  trainers.tsv
CS 3345 Graphical User Interface Design and Implementation/HTML_CSS/: hw1.css
CS 3345 Graphical User Interface Design and Implementation/Homework1/: hw1.html
CS 3345 Graphical User Interface Design and Implementation/React Frontend/: index.html  style.css
CS 3353 Algorithms/Custom Memory Manager/: .gitignore  CMakeLists.txt  README.md  main.cpp  manager.h  test-results-b.txt  test-results-c.txt  test-results-d.txt  test-results-f.txt  test_output.txt  test_output_large.txt  test_output_small.txt
CS 3353 Algorithms/Custom Memory Manager/Sentiment_Analyzer/: Classifier.hpp  Tweet.hpp  test.h
CS 3353 Algorithms/Kruskal MST Algorithm/: CMakeLists.txt  data.xlsx  disjoint_set.hpp  graph0.txt  graph1.txt  graph10.txt  graph11.txt  graph12.txt  graph13.txt  graph14.txt  graph2.txt  graph3.txt  graph4.txt  graph5.txt  graph6.txt  graph7.txt  graph8.txt  graph9.txt  graph_generator.py  main.cpp  mst_algorithm.hpp  simple_graph.hpp  timer.hpp  weighted_graph.hpp
CS 3353 Algorithms/Link Searching and Community Discovery/: CMakeLists.txt  exampleinput.txt  football-output.txt  graph.h  graphControl.h  karate-output.txt  main.cpp
CS 5343 Operating Systems and System Software/: README.md  bankers.c  bankers.h  numbergame.c  philosopher_buffet.c  philosopher_buffet_1.c  philosopher_input.txt  queue.c  queue.h  synchronization.c  synchronization_1.c  synchronization_2.c  synchronization_base.c  test.txt  threads.c
CS 7330 File Organization Database Management/: Database.py  LockManager.py  README.md  Transaction.py  detect.py  lh.py  main.py  wait-die.py
CS 7331 Data Mining/: Linear Regression.R
CS 7350 Algorithm Engineering/: README.md  graph.cpp  graph_coloring.cpp  graph_coloring.hpp  graph_generation.cpp  graph_generation.hpp  project.cpp  simple_growth.cpp
CSE 1341 Principles of Computer Science/: CircleProblem.java  FigurePrinter.java  StarPyramid.java
CSE 1342 Programming Concepts/Lab 2/: a.out  (+2 more)
KNW 2300 Introduction to Engineering Design/: High Level Design Presentation.pptx  QuadrantOne.java  QuadrantThree.java  QuadrantTwo.java  RobotMovement.java  obstacle avoidance.java  robot navigation.java
(+979 files in other folders)
